# bsp

./: .gitignore  README.md  belief.py  belief_grad_free.py  belief_opt.py  bsp_light_dark.py  cvxpy_util.py  math_util.py  model.py  plot.py  test_cvxpy.py  theano_belief.py  theano_util.py  util.py
AD_tools/casadi/: CMakeLists.txt  test-inequality.cpp
AD_tools/fadbad/: CMakeLists.txt  test-backward.cpp  test-branching.cpp  test-forward.cpp  test-with-arma.cpp  test-with-eigen.cpp
arm/: setupFiles.sh
arm/belief/: arm-belief-joint-goal-MPC.c  arm-belief-joint-goal-MPC.h  (+3 more)
cpp/: .cproject  .project  Makefile  TODO.txt  beliefMPC.c  beliefMPC.h  callisto.h  lpMPC.c  point-belief.cpp  point-lp.cpp  point-state.cpp  random-start.txt  stateMPC.c  stateMPC.h  statebspgen.m  symeval.c  utils.h
dstar/: Makefile  Program.cs  modifyCompiledSource.sh
forces/: beliefMPC.m  beliefMPC.mexa64  beliefmpcgen.m  beliefmpcpenaltygen.m  controlbspgen.m  generateCode.m  hess_structure.m  lpMPC.m  lpbspgen.m  myMPC.m  newParam.m  stateMPC.m  stateMPC.mexa64  statebspgen.m  wiki_simplempc.m
matlab/: MultistageProblem.m  beliefMPC.mexa64  forces_license.m  generateCode.m  getOptions.m  myMPC.mexa64  stateMPC.mexa64
multimodal3d/: CMakeLists.txt  utils.py  zbuffer.py
multimodal3d/geometry/: geometry2d.h  geometry3d.cpp
multimodal3d/include/: camera.h  geometry3d.h  pr2-sim.h  rave_utils.h  utils.h
multimodal3d/pr2/: pr2-sim.cpp  pr2-sim.h  pr2-system.cpp  pr2-system.h
multimodal3d/python/: geometry2d.py  zbuffer.py
multimodal3d/robots/: pr2-beta-sim.robot.xml
multimodal3d/src/: camera.cpp  geometry2d.cpp  geometry3d.cpp  mm-utils.cpp  pr2-sim.cpp  rave-utils.cpp  rave_utils.cpp
multimodal3d/tests/: test-fov.cpp
multimodal3d/utils/: mm-utils.cpp  rave-utils.cpp  rave-utils.h
parameter/: plot_parameter.py  random-start.txt  setupFiles.sh
pf/: CMakeLists.txt  Makefile  casadi-system.cpp  system.cpp  system.h
pf/boxes/: boxes-system.cpp  boxes-system.h  boxes.cpp  boxesMPC.c  casadi-boxes-system.cpp  casadi-boxes-system.h  plot_boxes.py  setupFiles.sh
pf/eih/: eih.cpp  eihMPC.c  eihMPC.h  eih_mpc_gen.m  eih_system.py  pr2_sim.cpp  pr2_sim.h  rave_utils.cpp  rave_utils.h
pf/eih/envs/: pr2-test.env.xml  testpr2sensors.env.xml
pf/eih/include/: eih_system.h  pr2_sim.h  rave_utils.h  utils.h
pf/eih/mpc/: eihMPC10.c  eihMPC10.h
pf/eih/pr2/: conversions.py  kinematics_utils.py  pr2_sim.py
pf/eih/python/: eih.py  eih_system.py
pf/eih/python/pr2/: pr2_sim.py  utils.py
pf/eih/robots/: pr2-beta-sim.robot.xml
pf/eih/src/: eih_system.cpp  pr2_sim.cpp  rave_utils.cpp
pf/eih/tests/: test.cpp
pf/explore/: casadi-explore-system.cpp  casadi-explore-system.h  explore-system.cpp  explore-system.h  explore.cpp  plot_explore.py  setupFiles.sh
pf/explore/mpc/: exploreMPC3_2.h
pf/tests/: test-entropy.cpp
planar/: CMakeLists.txt  planar.cpp  planar_mpc_gen.m  plot_planar.py
planar-eigen/: CMakeLists.txt  planar.cpp
planar/fadbad/: fadbad-planar-system.cpp  fadbad-planar-system.h  fadbad-utils.h
planar/include/: geometry2d.h  gmm.h  planar-system.h  planar-utils.h
planar/mpc/: planarMPC10.c  planarMPC10.h
planar/src/: geometry2d.cpp  gmm.cpp  planar-system.cpp  planar-utils.cpp
planar/tests/: plot_mean_shift.py  test-figtree.cpp  test-geometry2d.cpp  test-planar-system.cpp
point/: point-adouble.h
point-pf/: Makefile  plot_point_pf.py  point-pf.h  point-platt.h  setupFiles.sh  test-point-entropy.cpp  test-point-pf.cpp
point-pf/upenn_mi_planner/source_estimation/: CMakeLists.txt
point-pf/upenn_mi_planner/source_estimation/config/: levine_towne_waypoints.txt  los_nlos_params.yaml  los_nlos_sim_params.yaml
point-pf/upenn_mi_planner/source_estimation/launch/: est.launch  nanopan.launch  scarab.launch  sim.launch
point-pf/upenn_mi_planner/source_estimation/maps/: levine_towne_range.pgm
point-pf/upenn_mi_planner/source_estimation/scripts/: corner.sh  expt1.sh  expt2.sh  expt4.sh  home.sh  move-square.sh  run.sh  stop.sh  switch_places.sh  towne-corner.sh
point-pf/upenn_mi_planner/source_estimation/src/: estimate.cpp  estimate.hpp  information.hpp  information_test.cpp  measurement.cpp  mi_plan_node.cpp  particles_test.cpp  planner.hpp  planner_test.cpp  static_source_bag.cpp  static_source_node.cpp  test_main.cpp  types.hpp  util.hpp
point-pf/upenn_mi_planner/source_estimation/vis/: vis.xml
pr2/: CMakeLists.txt  pr2.cpp  pr2MPC.h  pr2_mpc_gen.m
pr2/envs/: pr2-table.env.xml  pr2-test.env.xml
pr2/fadbad/: fadbad-utils.h
pr2/fadbad/geometry/: fadbad-geometry2d.h  fadbad-geometry3d.h
pr2/fadbad/system/: fadbad-pr2-sim.cpp  fadbad-pr2-sim.h  fadbad-pr2-system.cpp  fadbad-pr2-system.h
pr2/geometry/: geometry2d.cpp  geometry2d.h  geometry3d.cpp  geometry3d.h
pr2/gsound/: test-gsound.cpp
pr2/mpc/: planarMPC5.c  planarMPC5.h  pr2MPC5.c  pr2MPC5.h
pr2/python/: cd.py  fk.py  greedysd.py  utils.py  zbuffer.py
pr2/robots/: pr2-beta-sim.robot.xml
pr2/system/: pr2-sim.cpp  pr2-sim.h  pr2-system.cpp  pr2-system.h  voxel-grid.cpp  voxel-grid.h
pr2/tests/: test-fadbad.cpp  test-fov.cpp  test-pr2-system.cpp
pr2/utils/: pr2-utils.cpp  pr2-utils.h  rave-utils.cpp  rave-utils.h
pr2_eih/: CMakeLists.txt  bsp.cpp  check_handle_grasps.py  nbv.cpp  pr2_eih.cpp  pr2_eih_brett.cpp  pr2_eih_entropy.cpp  pr2_eih_mpc_gen.m  pr2_eih_sim.cpp  pr2_eih_sqp.h  random.cpp
pr2_eih/docs/: flow_chart.graphml
pr2_eih/mpc/: pr2eihMPC.c  pr2eihMPC.h  pr2eihMPC2.c  pr2eihMPC2.h
pr2_eih/sqp/: pr2_eih_sqp.cpp  pr2_eih_sqp.h
pr2_eih/system/: pr2_eih_mapping.cpp  pr2_eih_mapping.h  pr2_eih_system.cpp  pr2_eih_system.h
pr2_eih/tests/: test_cost_teleop.cpp  test_entropy.cpp  test_particles_sd.cpp  test_pr2_eih_system.cpp
python/: belief.py  belief_grad_free.py  bsp_light_dark.py  cvxpy_util.py  plot.py
sandbox/: adolcsupport.h  arm-old.h  invertMatrix.hpp  landmarks.h  m  old_matrix.h  point-adolc.h  point-state-adolc.cpp  test-belief.cpp
slam/: createTests.sh  runTests.sh  setupFiles.sh  slam.cpp  slam.h
util/: dmatrix.h  logging.cpp  logging.h  utils.h
(+892 files in other folders)
